# lisova-poliana

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/cli/: data_commands.py  delta_commands.py  experiment_commands.py  extract_commands.py  test_commands.py
app/controllers/: data_controller.py  experiment_controller.py  extract_controller.py  multi_data_controller.py
app/core/contracts/: column_filter_contract.py  data_filter_contract.py  experiment_repository_contract.py  experiment_use_case_contract.py  extract_data_use_case_contract.py  extract_use_case_contract.py  multi_repository_contract.py  repository_contract.py  stat_evaluator_contract.py  use_case_contract.py
app/core/dto/: experiment_result.py  feature_stat.py  stat_conclusion.py  stat_result.py
app/core/use_cases/: add_personal_data.py  add_treatment_data.py  aggregate_data.py  build_delta.py  clear_data.py  combine_deltas.py  compute_deltas.py  enrich_data.py  enrich_delta.py  extract_data.py  extract_param_duplicates.py  extract_params.py  extract_personal_data.py  feature_inspect.py  normalize_data.py  preprocess_data.py
app/core/use_cases/experiments/: baseline_control_experiment.py
app/core/utils/: stat_utils.py  text_utils.py
app/infra/: di.py
app/infra/evaluators/: stat_evaluator.py  stat_evaluator_bu.py
app/infra/filters/: column_filter.py  data_filter.py
app/repositories/: data_repository.py  experiment_repository.py  json_repository.py  multi_data_repository.py  person_repository.py
app/utils/: os_utils.py
