[project]
name = "lisova-poliana"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector>=4.48.1",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "typer>=0.16.0",
]
